deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: 539247494152.dkr.ecr.ap-south-1.amazonaws.com/node-image-1:v2
        ports:
        - containerPort: 3000
