ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
  
    alb.ingress.kubernetes.io/scheme: internet-facing
   
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:539247494152:certificate/6e9e336d-5944-4782-aa2b-4ba6e53e3d6d
 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
   
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: gouravsingh.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port: 
              number: 80
